--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,23 @@ html
         if useExternalStyles
             link(rel="stylesheet", href="/build/application.css")
     body
-        h1 hello world
+        .site-wrap
+             .column.left
+                 section.playlist
+                      h1
+                          i.fa.fa-circle-o-notch.fa-spin
+             .column.center
+                 section.player
+                      h1
+                           i.fa.fa-circle-o-notch.fa-spin
+                 section.chat
+                      h1
+                           i.fa.fa-circle-o-notch.fa-spin
+             .column.right
+                  section.users
+                      h1
+                           i.fa.fa-circle-o-notch.fa-spin
+
+
         script(src="./build/vendor.js")
         script(src="./build/application.js")
