--- a/src/client/components/chat/chat.scss
+++ b/src/client/components/chat/chat.scss
@@ -21,6 +21,17 @@ section.chat {
       display: flex;
       border-top: 1px solid $background;
 
+      &.server-status {
+        color: lighten($color, 20%);
+        font-size: 5pt;
+      }
+
+      &.user-action {
+        color: $color-information;
+        opacity: .8;
+        font-style: italic;
+      }
+
       .message {
         flex-grow: 1;
         padding: 5px;
